Ceated Envoy.blade.php and fix  .env.testing.example

--- a/.env.testing.example
+++ b/.env.testing.example
@@ -1,16 +1,16 @@
 APP_NAME=backend-base-project
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=graylog
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_PORT=5432
+DB_DATABASE=phone_number_service_testing
+DB_USERNAME=postgres
 DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
