--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "fideloper/proxy": "^4.0",
         "jms/serializer": "^1.13",
         "laravel/framework": "5.7.*",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "apiclientslibrary": "1.3.*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.4",
@@ -21,7 +22,10 @@
         "phpunit/phpunit": "^7.0"
     },
     "repositories": [
-
+        {
+            "type": "composer",
+            "url": "http://satis.telephony.local"
+        }
     ],
     "autoload": {
         "classmap": [
@@ -58,7 +62,8 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "secure-http": false
     },
     "minimum-stability": "dev",
     "prefer-stable": true
