--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "apiclientslibrary": "1.3.*",
+        "barryvdh/laravel-cors": "^0.11.2",
         "fideloper/proxy": "^4.0",
         "jms/serializer": "^1.13",
         "laravel/framework": "5.7.*",
-        "predis/predis": "^1.1",
-        "apiclientslibrary": "1.3.*"
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.4",
