--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,9 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+SERVICE_ASTERISK_DIALPLAN_BUILDER_HOST=
+SERVICE_ASTERISK_DIALPLAN_BUILDER_API_VERSION=v1
+
+SERVICE_USER_HOST=http://user.telephony.local
+SERVICE_USER_API_VERSION=v1
+
