--- a/.env.testing.example
+++ b/.env.testing.example
@@ -38,3 +38,6 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+SERVICE_ASTERISK_DIALPLAN_BUILDER_HOST=
+SERVICE_ASTERISK_DIALPLAN_BUILDER_API_VERSION=
+
